--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "S. Sigman",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^8.0.1"
   }
